k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharebite-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sharebite-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
