k8s/base/service-ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharebite-ws
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sharebite-ws
  ports:
    - name: http
      port: 8080
      targetPort: 8080
